# autoremote-cli

./: .pre-commit-config.yaml  AGENTS.md  README.md  autoremote.py  pyproject.toml
.github/workflows/: ci.yml
src/autoremote_cli/: __init__.py  cli.py
tests/: test_autoremote.py
